--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -13,7 +13,7 @@
     <!-- ---------------------------------------------------------------------- -->
     <div class="row justify-content-center mb-3">
         <div class="col-md-9 text-center">
-            <h1 id="hometext" class="font-weight-bold">Ali's portfolio</h1>
+            <h1 id="hometext" class="font-weight-bold">Ali's personal portfolio</h1>
         </div>
     </div>
 
